fixed style overlap

--- a/client/src/pages/BookmarkList/index.css
+++ b/client/src/pages/BookmarkList/index.css
@@ -20,7 +20,7 @@
     color: rgb(150,0,0);
 }
 
-#li-container{
+#bookmark-li-container{
     display: flex;
     justify-content: space-between;
     background-color: rgb(240,240,240);
